syntax = "proto3";

package greet;

// --go_opt=module=github.com/Cotidie/STEADY/gRPC/Basics
option go_package = "github.com/Cotidie/STEADY/gRPC/Basics/greet/proto";

message KtOne {
    int32 id = 1;
}

message KtTwo {
    string name = 1;
}

message KtBoth {
    KtOne one = 1;
    KtTwo two = 2;
}

message BothRequest {
    repeated KtBoth data = 1;
}

message BothResponse {
    string message = 1;
}

service BothService {
    rpc TestBoth(BothRequest) returns (BothResponse);
}